# vector-agent

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  test_pipeline.py
src/: __init__.py  main.py  pipeline.py  vector_agent_cli.py
src/agents/: __init__.py  llm_agent.py
src/core/: agent.py  config.py
src/geometry/: __init__.py  boolean_ops.py  svg_elements.py  validation.py
src/models/: __init__.py  recipes.py  schema.py
src/stages/: assemble_stage.py  brief_stage.py  compile_stage.py  decompose_stage.py  generate_stage.py  layout_stage.py  plan_stage.py  refine_stage.py  route_stage.py  style_stage.py  validate_stage.py
src/svg/: __init__.py  safety.py
src/tools/: color_paletter.py  math_engine.py  render_svg.py  svg_optimizer.py  svg_validator.py  vlm_critic.py
src/utils/: llm.py
