[project]
name = "svg-agent"
version = "0.1.0"
description = "Autonomous SVG REPL Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "reportlab>=4.5.0",
    "requests>=2.32.3",
    "svglib>=1.6.0",
    "lxml>=5.3.0",
]

[tool.uv]
managed = true

[tool.setuptools]
package-dir = {"" = "src"}
