[project]
name = "vector-agent"
version = "0.1.0"
description = "Autonomous Vector Graphics Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "pydantic>=2.10.6",
    "pydantic-ai-slim[openai,retries]>=1.0.0",
    "python-dotenv>=1.0.1",
    "shapely>=2.0.7",
    "svgpathtools>=1.6.1",
    "tenacity>=9.0.0",
]

[tool.uv]
managed = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
vector-agent = "vector_agent_cli:main"
